# -literateProgrammingInConTeXt

./: .gitignore  LICENSE  README.md  Readme.md
context/t-litprog/tex/context/third/litprog/: t-litprog.lua  t-litprog.mkiv
doc/: .gitignore  Editor.md  InfoSketch.odp  ToDo.md
python/: pyproject.toml
python/buildRules/: Readme.md
python/lpc/: cli.py
python/lpc/macros/: baseContext.py  litterateProgramming.py
python/lpic/: cli.py  ninja.py  ninja_syntax.py  parser.py
python/lpic/macros/: baseContext.py  literateProgramming.py  litterateProgramming.py
python/pcfBuildRules/: Readme.md  cCode.py  context.py
python/scripts/: installEditableLpcCommand  installEditableLpicCommand
